--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prettier/plugin-php": "^0.21.0"
+    "@prettier/plugin-php": "^0.21.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
-    "sass": "^1.83.1"
+    "sass": "^1.86.2"
   }
 }
